2024-06-30  hwpplayer1  <hwpplayer1@debian>

	* c-basic/scanf_2.c: scanf two numbers

	* c-basic/scanf.c: Scanf example

	* c-basic/printf.c: printf example

	* c-basic/foo.c: Foo example

	* c-basic/helloworld.c: hello world example

2024-02-19  Mert Gör  <mertgor@masscollabs.xyz>

	* c-basic/C.pdf: Fonksiyonların Parametre Değişkenleri sayfa 27'deyiz

	* c-basic/global.variable.c: C'de  derleme  işleminin  bir  yönü  vardır.  Bu  yön  yukarıdan  aşağıya  doğrudur.  Derleyicinin  önce  değişkenin 
bildirimini görmesi gerekir. Bu nedenle bir global değişkeni aşağıda bildirip daha yukarıda kullanamayız. 

	* c-basic/local.variable.c: Bir global değişkenle aynı isimli yerel değişkenler tanımlanabilir. Çünkü bunlar farklı faaliyet alanlarına sahiptir. 
Tabi  ilgili  blokta  bu  değişken  ismi  kullanıldığında  dar  faaliyet  alanaına  sahip  olana  (yani  yerel  olana)  erişilir. 


	* c-basic/global.variable.scope.c: Bildirimleri fonksiyonların dışında yapılan değişkenlere global değişkenler denir. Global değişkenler dosya faaliyet 
alanına (file scope) sahiptir. Yani tüm fonksiyonlarda tanınırlar. 

	* c-basic/scope.example.c: C'de bir blokta bir'den fazla değişken faaliyet gösteriyorsa o blokta o değişken ismi kullanıldığında dar faaliyet 
alanına sahip olan değişkene erişilir. 

	* c-basic/global-local-variables.c: global and local variable scopes exmplained

	* c-basic/void.function.c: void fonksiyonlarda return kullanılmamışsa fonksiyon ana blok sonlanınca sonlanır. 

	* c-basic/return.2.c: return 0;    /* bu olmasaydı da aynı anlam oluşacaktı */ 

	* c-basic/return.c: return explained

	* c-basic/abc-double.c: İsmi a, b, c olan double türden 3 değişken tanımlayınız. Sonra a ve b için klavyeden scaf fonksiyonuyla okuma 
yapınız. Bu ikisinin toplamını c'ye atayınız ve c'yi yazdırınız.

	* c-basic/float-and-double.c: printf fonksiyonunda hem float hem de double türleri %f ile yazdırılır. Ancak scanf fonksiyonunda float %f ile, 
double %lf ile okunur. 
